--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 Right-click "Computer" on the Desktop or Start Menu.
-Select "Properties".
+Select "FAR awAY".
 On the very far left, click the "Advanced system settings" link.
 Click the "Environment Variables" button at the bottom.
 Double-click the "Path" entry under "System variables".
