--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,4 @@
 Right-click "Computer" on the Desktop or Start Menu.
-Select "FAR awAY".
-On the very far left, click the "Advanced system settings" link.
-Click the "Environment Variables" button at the bottom.
-Double-click the "Path" entry under "System variables".
+ variables".
 At the end of "Variable value", insert a ; if there is not already one, and then C:\Program Files\Git\bin\;C:\Program Files\Git\cmd\. Do not put a space between ; and the entry.
 Close and re-open your console.
