--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,8 @@
-Right-click "Computer" on the Desktop or Start Menu.
- variables".
-At the end of "Variable value", insert a ; if there is not already one, and then C:\Program Files\Git\bin\;C:\Program Files\Git\cmd\. Do not put a space between ; and the entry.
-Close and re-open your console.
+<html>
+ <head>
+  <title> This is my webpage </title>
+ </head>
+ <body>
+  Hello world! hello hello hello
+ </body>
+</html>
